-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0, 5.3.0 Alpha, 5.3.0 Beta1
-
Windows 7, msvc2010, x86, ANGLE
-
6e9b406fefe7fe3147587d573f1763c906682f5e
Quiting from application with dynamically created window containing loaded from network font, results in a crash.
To reproduce, close red window.
Signal QQmlEngine::quit() emitted, but no receivers connected to handle it.
0 QGenericAtomicOps<QAtomicOpsBySize<4> >::load<long> qgenericatomic.h 96 0x576c32f6
1 QBasicAtomicInteger<int>::load qbasicatomic.h 142 0x576c1fa0
2 QtPrivate::RefCount::isShared qrefcount.h 97 0x576c2a11
3 QLinkedList<QFontEngine::GlyphCacheEntry>::detach qlinkedlist.h 107 0x577fd946
4 QLinkedList<QFontEngine::GlyphCacheEntry>::begin qlinkedlist.h 191 0x5780b38f
5 QFontEngine::clearGlyphCache qfontengine.cpp 896 0x57805d28
6 QSGRenderContext::invalidate qsgcontext.cpp 498 0x58b42e95
7 QSGWindowsRenderLoop::windowDestroyed qsgwindowsrenderloop.cpp 268 0x58b6f9cb
8 QQuickWindow::~QQuickWindow qquickwindow.cpp 1011 0x58b9bd93
9 QQuickView::~QQuickView qquickview.cpp 209 0x58c81057
10 QtQuick2ApplicationViewer::~QtQuick2ApplicationViewer qtquick2applicationviewer.cpp 63 0x126172d
11 main main.cpp 12 0x12611a4
12 WinMain qtmain_win.cpp 131 0x1262c8a
13 __tmainCRTStartup crtexe.c 547 0x12621c0
14 WinMainCRTStartup crtexe.c 371 0x1261f4f
15 BaseThreadInitThunk kernel32 0x75f6ed5c
16 __RtlUserThreadStart ntdll 0x775237eb
17 _RtlUserThreadStart ntdll 0x775237be
- relates to
-
QTBUG-37190 Fontdata gets corrupted with poor /broken network connection resulting in crash while loading a webpage.
-
- Closed
-
| For Gerrit Dashboard: QTBUG-36573 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 86155,2 | Fix crash in QSGRenderContext::invalidate(). | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |